--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">movie-app</string>
     <string name="welcome">Welcome!</string>
     <string name="click_me">Click me</string>
+    <string name="find_the_title_and_length_of_movies_with_input_year">Find the title and length of movies with input year:</string>
+    <string name="year">Year</string>
+    <string name="submit_query">Submit Query</string>
+    <string name="title">Title</string>
+    <string name="length">Length</string>
+    <string name="movie_title">Movie Title</string>
 </resources>
